# rscraper

./: Cargo.toml  retailers.json
src/: main.rs
